[package]
name = "gt_rs"
version = "0.1.1"
edition = "2021"
authors = ["Jay Turnsek jaymturnsek@gmail.com"]
description = "A better CD"
license = "MIT"
repository = "https://github.com/turnsy-backup/gt_rs"

[dependencies]
confy = "0.6.1"
dialoguer = "0.11.0"
serde = "1.0.219"
serde_derive = "1.0.219"

[[bin]]
name = "gt_rs"
path = "src/main.rs"
